k8s/20-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: pff
spec:
  replicas: 2
  selector:
    matchLabels: { app: backend }
  template:
    metadata:
      labels: { app: backend }
    spec:
      containers:
        - name: backend                 # match set-image
          image: ghcr.io/fattoumifahd/pff:backend-8207d44
          ports:
            - containerPort: 9000       # php-fpm listens here
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: pff
spec:
  selector: { app: backend }
  ports:
    - port: 9000
      targetPort: 9000
