k8s/30-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: pff
spec:
  replicas: 2
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: web                     # match set-image
          image: ghcr.io/fattoumifahd/pff:frontend-latest
          ports:
            - containerPort: 80
      # imagePullSecrets:
      #   - name: ghcr-secret           # only if repo is private
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: pff
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
