k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pff-ingress
  namespace: pff
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: app.example.com     
      http:
        paths:
          - path: /api(/|$)(.*)  
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 9000
          - path: /(.*)          
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
